--- a/main_app/templates/main_app/navi.html
+++ b/main_app/templates/main_app/navi.html
@@ -1,8 +1,8 @@
 {% load static %}
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: black">
   <a class="navbar-brand" href="{% url 'main_app:index' %}">
-    <img src="{% static 'img/koodi_guru_text_no_back.png' %}" alt="KoodiGuru" height="50" >
-  </a>  
+    <img src="{% static 'img/guru_header.png' %}" alt="KoodiGuru" height="50">
+  </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -11,7 +11,7 @@
     <ul class="navbar-nav mr-auto">
       <li class="nav-item {% if request.path == '/' %}active{% endif %}">
         <a class="nav-link" href="{% url 'main_app:index' %}">Koti</a>
-    </li>
+      </li>
 <!--
     <p>{{ request.path }}</p>
 -->
@@ -25,11 +25,12 @@
     -->
       <li class="nav-item {% if request.path == '/courses/' %}active{% endif %}">
         <a class="nav-link" href="{% url 'main_app:course_list' %}">Kurssit</a>
-    </li>
+      </li>
       <li class="nav-item {% if request.path == '/contacts/' %}active{% endif %}  0">
         <a class="nav-link" href="{% url 'main_app:contact' %}">Yhteystiedot</a>
       </li>
     </ul>
+
     <ul class="navbar-nav">
       {% if user.is_authenticated %}
         <li class="nav-item {% if request.path == '/profile/' %}active{% endif %}">
@@ -37,7 +38,6 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'main_app:logout' %}">Kirjaudu ulos</a>
-
         </li>
       {% else %}
         <li class="nav-item {% if request.path == '/login/' %}active{% endif %}">
@@ -52,22 +52,19 @@
     <form class="form-inline my-2 my-lg-0" action="{% url 'main_app:search' %}" method="get">
       <input class="form-control mr-sm-2" type="search" placeholder="Hae" name="q" aria-label="Hae"/>
       <button class="btn btn-light my-2 my-sm-0" type="submit">Hae</button>
-  </form>    
-  <ul class="navbar-nav">
-    {% if user.is_authenticated and user.role == 'student' and not user.is_premium %}
-   
-   
-    <!--
-      maksullisen siällön ostaminen ei vielä käytössä 
-     <a class="nav-link btn btn-warning" href="#" style="color: black; font-weight: bold;">Osta Premium</a>
-   -->
+    </form>    
 
+    <ul class="navbar-nav">
+      {% if user.is_authenticated and user.role == 'student' and not user.is_premium %}
+     
+     
+      <!--
+        maksullisen siällön ostaminen ei vielä käytössä 
+       <a class="nav-link btn btn-warning" href="#" style="color: black; font-weight: bold;">Osta Premium</a>
+     -->
 
-      </li>
-    {% endif %}
-  </ul>
-  
+        </li>
+      {% endif %}
+    </ul>
   </div>
 </nav>
-
-
