--- a/main_app/templates/main_app/review_task.html
+++ b/main_app/templates/main_app/review_task.html
@@ -1,59 +1,79 @@
-<head>
+{% extends 'main_app/base.html' %}
 
-   </head>
-   {% extends 'main_app/base.html' %}
-   {% block title %}
-       KoodiGuru-review task
-   {% endblock %}
-   {% block content %}
-   {% load static %}
+{% block title %}
+    {{ task.taskTitle|safe }} - Vastauksen tarkastelu - KoodiGuru
+{% endblock %}
+
+{% block content %}
+{% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/review_task_styles.css' %}">
-<a href="{% url 'main_app:course_detail' task.course.id %}"> Siirry takaisin  kurssin pääsivulle</a>
-<h1 style="text-align: center">{{ task.taskTitle|safe }}</h1>
-<br>
-<br>
-   <h3 class="content-header">Tehtävänanto </h3>
-  
-   <div class="description-style content-section">
-       <p>{{ task.taskDescription|safe }}</p>
-   </div>
-   <br> 
-   <div class="task-actions">
-    <a href="{% url 'main_app:perform_task' task.id %}">Suorita tehtävä uudestaan</a>
-    {% if next_task %}
-        <a href="{% url 'main_app:perform_task' next_task.id %}">Siirry seuraavaan tehtävään</a>
-    {% else %}
-        <span>Olet suorittanut kaikki tehtävät!</span>
-    {% endif %}
+
+<div class="task-container">
+    <!-- Navigation -->
+    <div class="navigation-bar">
+        <a href="{% url 'main_app:course_detail' task.course.id %}" class="btn btn-outline-secondary">
+            <i class="bi bi-arrow-left"></i> Takaisin kurssin pääsivulle
+        </a>
+    </div>
+
+    <!-- Task Title -->
+    <h1 class="task-title">{{ task.taskTitle|safe }}</h1>
+
+    <!-- Task Description -->
+    <div class="content-section">
+        <h3 class="content-header">Tehtävänanto</h3>
+        <div class="description-style">
+            {{ task.taskDescription|safe }}
+        </div>
+    </div>
+
+    <!-- Task Navigation -->
+    <div class="task-actions">
+        <a href="{% url 'main_app:perform_task' task.id %}" class="btn btn-outline-primary">
+            <i class="bi bi-play-fill"></i> Suorita tehtävä uudestaan
+        </a>
+        {% if next_task %}
+            <a href="{% url 'main_app:perform_task' next_task.id %}" class="btn btn-primary">
+                <i class="bi bi-arrow-right"></i> Siirry seuraavaan tehtävään
+            </a>
+        {% else %}
+            <div class="completion-message">
+                <i class="bi bi-trophy-fill text-warning"></i>
+                <span>Onnittelut! Olet suorittanut kaikki tehtävät!</span>
+            </div>
+        {% endif %}
+    </div>
+
+    <!-- Example Run -->
+    <div class="content-section">
+        <h3 class="content-header">Esimerkkiajo</h3>
+        <div class="code-display">
+            <pre class="code-block">{{ answer.answerOutput }}</pre>
+        </div>
+    </div>
+
+    <!-- Model Answer -->
+    <div class="content-section">
+        <h3 class="content-header">Tehtävän mallivastaus</h3>
+        <div class="code-display">
+            <pre class="code-block">{{ answer.answerText }}</pre>
+        </div>
+        {% if answer.aswerVideo %}
+            <div class="video-link">
+                <a href="{{ answer.aswerVideo }}" target="_blank" class="btn btn-outline-info">
+                    <i class="bi bi-play-circle"></i> Katso vastauksen video-ohje
+                </a>
+            </div>
+        {% endif %}
+    </div>
+
+    <!-- User's Answer -->
+    <div class="content-section">
+        <h3 class="content-header">Sinun vastauksesi</h3>
+        <div class="code-display">
+            <pre class="code-block">{{ user_answer.answer }}</pre>
+        </div>
+    </div>
 </div>
-   <br>
-   <br>
-   <div class="example-run-container content-section">
-       <h3>Esimerkkiajo:</h3>
-       <div class="example-run">
-           <pre class="prettyprint">
-   <p>{{ answer.answerOutput }}</p>
-           </pre>
-       </div>
-   </div>
-   <div class="example-run-container content-section">
-       <h3>Tehtävän mallivastaus:</h3>
-       <div class="example-run">
-           <pre class="prettyprint">   
-                <pre>{{ answer.answerText}}</pre>
-           </pre>
-       </div>
-       {% if  answer.aswerVideo %}
-       <p><a href="{{ answer.aswerVideo }}" target="_blank"><strong>Linkki tehtävän vastaus tutoriaaliin</a></strong></p>
-   {% endif %}
-   </div>
-   <div class="example-run-container content-section">
-       <h3>Sinun koodisi:</h3>
-       <div class="example-run">
-           <pre class="prettyprint">      
-              <pre>{{user_answer.answer}}</pre>
-           </pre>
-       </div>
-   </div>
-   {% endblock %}
+{% endblock %}
    
