--- a/staticfiles/css/main_styles.css
+++ b/staticfiles/css/main_styles.css
@@ -305,10 +305,16 @@ align-items: center;
 min-height: 100vh;
 }
 
-form:hover {
-  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
+.btn-primary {
+  background-color: #333;
+  border-color: #333;
 }
 
+
+.btn-primary:hover {
+  background-color: #636262 !important;
+  border-color: #636262 !important;
+}
 /* Otsikko */
 form h2 {
   font-family: "Roboto", sans-serif;
